# QJSEngine-playground

./: CMakeLists.txt  main.cc  myjsfunc.h  test2.js  test3.js
